# facilenn

./: .clang-format  .gitignore  .gitmodules  .travis.yml  README.md
cmake/modules/: findTBB.cmake
data/cifar10/: prepare_cifar10_dataset.sh
data/fashion_mnist/: prepare_fashion_mnist_dataset.sh
data/mnist/: prepare_mnist_dataset.sh
docker/: dockerfile.dev.ubuntu
examples/: example.cpp
facilenn/: facilenn.h
facilenn/backends/: backend_types.h
facilenn/backends/tensor/: tensor.h  tensor_core.h
facilenn/core/: context.h  core.h
facilenn/core/op/: activation_relu_ops.h  activation_softmax_ops.h  fully_connected_ops.h  op.h
facilenn/core/optimizers/: optimizer.h
facilenn/layers/: abstract_layer.h  fully_connected_layer.h  layer_types.h  layers.h  optimizer_helpers.h  relu_layer.h  softmax_layer.h
facilenn/loss/: loss.h  loss_functions.h
facilenn/utils/: macros.h  utils.h
sensy/: sensy.h
sensy/backends/: backend_types.h  backends.h
sensy/backends/tensor/: tensor.h  tensor_core.h
sensy/core/: context.h
sensy/layers/: abstract_layer.h  layers.h
sensy/utils/: utils.h
test/: CMakeLists.txt  test.cpp  test_all_in_one.cpp  test_naive.cpp  test_openblas.cpp
tino/: tino.h
tino/backends/: backend_types.h  backends.h  tensor_wrappers.h
tino/backends/blas/: blas_wrappers.h
tino/backends/tensor/: tensor.h  tensor_core.h
tino/core/: context.h  core.h  initializer.h
tino/core/op/: activation_relu_ops.h  activation_softmax_ops.h  fully_connected_ops.h  op.h
tino/core/optimizers/: optimizer.h  optimizer_helpers.h
tino/layers/: abstract_layer.h  fully_connected_layer.h  layer_types.h  layers.h  optimizer_helpers.h  relu_layer.h  softmax_layer.h
tino/loss/: loss.h  loss_functions.h
tino/utils/: macros.h  parallel.h  utils.h
tino/utils/datasets/: cifar10.h  datasets.h  mnist.h  xor.h
